2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Track build directory change.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.csproj: Move output dir from ../bin
	  to ../build.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui:
	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.AspNet.Mvc.Gui.AddViewDialog.cs: Add
	  missing files.

2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.csproj:
	* MonoDevelop.AspNet.Mvc.addin.xml: Reference the
	  TextTemplating addin.

	* Gui/AddViewDialog.cs: Fix warning.

	* Gui/FolderNodeBuilderExtension.cs: Move error-showing code
	  to the TemplatingService.

2009-03-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.addin.xml: Update dependencies.

	* Gui/AddViewDialog.cs:
	* MonoDevelop.AspNet.Mvc.csproj: Add class picker.

2009-03-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/AddViewDialog.cs: Get the placeholder list from the
	  master page. Better validation of input.

2009-03-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.csproj: Updated.

	* AspMvcProject.cs: Add method for looking up .tt files.

	* Gui/AddViewDialog.cs: New Add View dialog.

	* Gui/FolderNodeBuilderExtension.cs: Use new Add View dialog
	  and the MVC T4 host.

	* CodeTemplates:
	* TextTemplating:
	* CodeTemplates/AddView:
	* CodeTemplates/AddController: Added.

	* TextTemplating/MvcTextTemplateHost.cs: ASP.NET MVC T4 host.

	* CodeTemplates/AddView/Empty.tt: Simple empty tt file.

	* Templates/UserControl.xft.xml: Add more whitespace.

2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>

	* T4/Engine.cs:
	* T4/Tokeniser.cs:
	* T4/ToStringHelper.cs:
	* T4/ParsedTemplate.cs:
	* T4/TextTransformation.cs:
	* T4/DirectiveProcessor.cs:
	* MonoDevelop.AspNet.Mvc.csproj:
	* T4/ITextTemplatingEngineHost.cs:
	* T4/DirectiveProcessorException.cs: