@@ -1,3 +1,7 @@
+2009-04-09  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Parser/T4Parser.cs: Track parser API.
+
 2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.TextTemplating.csproj: Move output dir from
